# gem

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: browser_interaction.rs  cache.rs  cli.rs  gemma.rs  inference.rs  lib.rs  llm_api.rs  llm_response_parser.rs  locatesource.rs  lsif.rs  main.rs  parser.rs
src/prompts/: change.txt  initial.txt  sufficient.txt
tests/: live_llm_tests.rs  llm_integration_tests.rs
