[package]
name = "gem"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tempfile = "3" 
ignore = "0.4.23"
systeminfo = "0.1.5"
lsp-types = "0.97.0"
regex = "1.11.1"
syn = { version = "2.0.101", features = ["parsing", "full", "visit"] }
