[package]
name = "gem"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tempfile = "3" 
ignore = "0.4.23"
lsp-types = "0.97.0"
regex = "1.11.1"
syn = { version = "2.0.101", features = ["parsing", "full", "visit", "printing"] }
quote = "1.0.40"
toml = "0.8.22"
cargo_toml = "0.22.1"
sha2 = "0.10.9"
indicatif = "0.17"
atty = "0.2"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3"
serial_test = "1.0.0"

[[test]]
name = "llm_integration_tests"
path = "tests/llm_integration_tests.rs"

[[test]]
name = "live_llm_tests"
path = "tests/live_llm_tests.rs"
