[package]
name = "gem"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] } # Added "stream"
tempfile = "3" 
ignore = "0.4.23"
lsp-types = "0.97.0"
regex = "1.11.1"
syn = { version = "2.0.101", features = ["parsing", "full", "visit", "printing"] }
quote = "1.0.40"
toml = "0.8.22"
cargo_toml = "0.22.1"
sha2 = "0.10.9" # Already present, version 0.10.9
indicatif = "0.17"
atty = "0.2"
proc-macro2 = { version = "1.0.81", features = ["span-locations"] }
# New dependencies for mistral.rs integration
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", tag = "v0.6.0", optional = true } # Using v0.6.0 tag
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
directories = "5.0" # This might be removable if build.rs is gone and model.rs doesn't need it directly
flate2 = "1.0" # This might be removable if build.rs is gone
once_cell = "1.19"
thiserror = "1.0"
# serde is already present: serde = { version = "1.0", features = ["derive"] }

[features]
default = []
mistral_integration = ["dep:mistralrs"]

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3"
serial_test = "1.0.0"

[[test]]
name = "llm_integration_tests"
path = "tests/llm_integration_tests.rs"

[[test]]
name = "live_llm_tests"
path = "tests/live_llm_tests.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
